syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService.MDS";

package MDS;

service MdsGrpcService{
    rpc GetReferenceData(ReferenceDataRequest) returns (ReferenceData);

    rpc Subscribe(SubscriptionRequest) returns (MarketData);

    rpc UnSubscribe(UnSubscriptionRequest) returns (MarketData);

    rpc MarketDataHandler( google.protobuf.Empty ) returns (stream DataItem);
}

message ReferenceDataRequest{
    repeated string tickers = 1;
    repeated string mnemonics = 2;
}

message SubscriptionRequest{
    repeated string tickers = 1;
    repeated string mnemonics = 2;
}

message UnSubscriptionRequest{
    repeated string tickers = 1;
}

message ReferenceData{
   repeated DataItem items = 1;
}

message MarketData{
    repeated DataItem items = 1;
}

message DataItem{
    string ticker = 1;
    map<string,string> mnemonics = 2;
    string message = 3;
}
