syntax="proto3";

option csharp_namespace="GrpcPoints";

service PointSProvider{
	rpc GetUserPoints (UserPointRequest) returns (UserPointResponse);
}

message UserPointRequest{
	int64 UserId = 1;
}

message UserPointResponse{
	double UserPoints = 1;
}
